--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -63,7 +63,7 @@
 
 		h1
 			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-			margin: 0 0 5px 0
+			margin: 0 0 10px 0
 
 		h2
 			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -108,7 +108,7 @@
 	.eze-publish-modal
 		.publish-info
 			font-size: 11px
-			margin: 0 0 5px 0
+			margin: -5px 0 5px 0
 		label.checkbox
 			margin: 0 0 5px 2px
 
