--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -78,11 +78,11 @@
 
 		&.move-in header
 			-moz-animation: stack-header-move-in 0.5s ease 1 normal
-			//-webkit-animation: stack-header-move-in 0.7s ease 1 normal
+			-webkit-animation: stack-header-move-in 0.7s ease 1 normal
 
 		&.move-out header
-			-moz-animation: stack-header-move-out 0.5s ease 1 normal
-			-webkit-animation: stack-header-move-out 0.5s ease 1 normal
+			-moz-animation: stack-header-move-out 0.2s ease 1 normal
+			-webkit-animation: stack-header-move-out 0.2s ease 1 normal
 
 		.eze-autosave
 			float: right
