--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -199,7 +199,7 @@
 			&:first-child
 				border-top: 0
 
-			img
+			.user-image
 				height: 34px
 				width: 34px
 				border-radius: 34px
@@ -211,6 +211,14 @@
 
 				.date
 					font-size: 11px
+
+				&.like-post
+					font-size: 11px
+					margin: 5px 0 -18px 40px
+
+					a
+						color: #D67F00
+						text-decoration: underline
 
 			.add-comment-button
 				float: right
