--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -222,11 +222,8 @@
 			p
 				font: normal 11px/16px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 
-		.eze-comments
-			margin: 0 -5px
-
-			li:last-child
-				border-bottom: 0
+		.eze-comments li:last-child
+			border-bottom: 0
 
 				
 
