--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -18,19 +18,6 @@
 			left: 0
 			border: 1px solid #888
 
-	.block-settings
-		width: 400px
-
-		p
-			margin: 0
-
-		input[type="number"]
-			width: 40px
-			margin: 0px 5px 0 5px
-
-		select
-			width: 100px
-
 
 	// Custom generic list, with drag and drop
 	// ----------------------------------------------
@@ -105,23 +92,12 @@
 					margin: -1px 5px 0 5px
 					line-height: 22px
 
-				.datetime
-					font-size: 11px
+				.activate-time, .activate-date
+					text-align: center
+					width: 35px
 
-					span
-						float: left
-						margin: -1px 3px 0 0
-
-
-					input
-						width: 30px
-						display: inline
-						font-size: 11px
-						padding: 2px 5px
-						margin-left: 5px
-
-						&.publish-date
-							width: 60px
+				.activate-date
+					width: 75px
 
 				.right-align
 					position: absolute
