--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -10,22 +10,22 @@
 		float: left
 		width: 100%
 
-		h1
-			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-			margin: 20px 20px 10px 20px
-
 		ul
 			float: left
 			list-style: none
-			margin: 0 10px 0 20px
+			margin: 20px 10px 5px 20px
 
 			li
 				float: left
 				font: normal 12px/12px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-				margin: 0 10px 10px 0
+				margin: 0 10px 5px 0
 
 				input
 					margin: -1px 5px 0 0
+
+				h1
+					font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+					margin: 0
 
 	.attr-group
 		@include gradient(#fafafa,#dddddd)
