--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -87,6 +87,10 @@
 		height: 25px
 		font-size: 12px
 
+	.chzn-container-single .chzn-single, select, input[type="file"]
+		height: 25px
+		line-height: 26px
+
 	input[type="text"], input[type="password"], 
 	input[type="datetime"], input[type="datetime-local"], 
 	input[type="date"], input[type="month"], input[type="time"], 
@@ -96,10 +100,6 @@
 		line-height: 16px
 		height: 16px
 		padding: 6px 4px 3px 5px
-
-	select, input[type="file"]
-		height: 24px
-		line-height: 24px
 
 	.input-prepend .add-on, .input-append .add-on
 		height: 17px
