--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -115,7 +115,7 @@
 						background: transparent
 						border: 0
 						padding: 0 15px
-						margin: 0
+						margin: -1px 0 0 0
 						border-radius: 0
 						border-left: 1px solid #d0d0d0
 			
