--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -105,22 +105,28 @@
 				margin: 0 0 10px 0
 
 				img
-					margin: -1px 5px 0 0
+					margin: -3px 3px 0 0
 
 
 		// All attributes ——————————————————————————
 		
-		.eze-string
+		.eze-string, .eze-date
 			input
-				width: 90%
+				box-sizing: border-box
+				height: auto
+				width: 100%
 
 		.eze-select
 			select
 				width: 100%
 
 		.eze-date
-			input
-				width: 110px
+			.input-append
+				margin-right: 10px
+
+			.icon-calendar
+				font-size: 16px
+				vertical-align: 0
 
 		.eze-image, .eze-dam
 			.thumbnail
