--- a/css/eze.css
+++ b/css/eze.css
@@ -904,7 +904,8 @@
       .eze .eze-comments li .add-comment .btn {
         position: absolute;
         top: 0;
-        right: 0; }
+        right: 0;
+        z-index: 2; }
       .eze .eze-comments li .add-comment input {
         margin: 0 0 0 0;
         font: normal 11px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
@@ -1110,12 +1111,13 @@
   .eze .eze-object-attributes .eze-date .icon-calendar {
     font-size: 16px;
     vertical-align: 0; }
+  .eze .eze-object-attributes .eze-image .btn, .eze .eze-object-attributes .eze-dam .btn {
+    margin: 0 5px 5px 0; }
   .eze .eze-object-attributes .eze-image .thumbnail, .eze .eze-object-attributes .eze-dam .thumbnail {
+    position: relative;
     margin: 0 0 10px 0;
     background: white; }
-  .eze .eze-object-attributes .eze-image .thumbnail, .eze .eze-object-attributes .eze-dam .thumbnail {
-    position: relative; }
-    .eze .eze-object-attributes .eze-image .thumbnail .btn, .eze .eze-object-attributes .eze-dam .thumbnail .btn {
+    .eze .eze-object-attributes .eze-image .thumbnail .edit-image, .eze .eze-object-attributes .eze-dam .thumbnail .edit-image {
       position: absolute;
       bottom: 10px;
       left: 10px; }
@@ -1132,6 +1134,30 @@
       opacity: 1;
       background: white;
       border-bottom-left-radius: 4px; }
+  .eze .eze-object-attributes .eze-image .add-tag, .eze .eze-object-attributes .eze-dam .add-tag {
+    position: relative; }
+    .eze .eze-object-attributes .eze-image .add-tag .btn, .eze .eze-object-attributes .eze-dam .add-tag .btn {
+      position: absolute;
+      right: -2px;
+      margin: 0;
+      z-index: 2; }
+    .eze .eze-object-attributes .eze-image .add-tag input, .eze .eze-object-attributes .eze-dam .add-tag input {
+      box-sizing: border-box;
+      height: auto;
+      width: 100%; }
+  .eze .eze-object-attributes .eze-image .tags .label, .eze .eze-object-attributes .eze-dam .tags .label {
+    padding: 4px;
+    font-size: 11px;
+    display: block;
+    float: left;
+    margin: 0 5px 5px 0; }
+  .eze .eze-object-attributes .eze-image .tags .close, .eze .eze-object-attributes .eze-dam .tags .close {
+    float: none;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    font-size: 16px;
+    margin: -6px 0 0 2px;
+    color: white; }
   .eze .eze-object-attributes .eze-matrix table {
     margin: 0 0 10px 0; }
   .eze .eze-object-attributes .eze-matrix th {
