--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -129,16 +129,16 @@
 				vertical-align: 0
 
 		.eze-image, .eze-dam
-			.thumbnail
-				margin: 0 0 10px 0
-				background: #fff
 
-		.eze-image, .eze-dam
+			.btn
+				margin: 0 5px 5px 0
 
 			.thumbnail
 				position: relative
+				margin: 0 0 10px 0
+				background: #fff
 				
-				.btn
+				.edit-image
 					position: absolute
 					bottom: 10px
 					left: 10px
@@ -154,6 +154,36 @@
 					opacity: 1
 					background: #fff
 					border-bottom-left-radius: 4px
+
+			.add-tag
+				position: relative
+
+				.btn
+					position: absolute
+					right: -2px
+					margin: 0
+					z-index: 2
+
+				input
+					box-sizing: border-box
+					height: auto
+					width: 100%
+
+			.tags
+				.label
+					padding: 4px
+					font-size: 11px
+					display: block
+					float: left
+					margin: 0 5px 5px 0
+
+				.close
+					float: none
+					opacity: 1
+					filter: alpha(opacity=100)
+					font-size: 16px
+					margin: -6px 0 0 2px
+					color: #fff
 
 		.eze-matrix
 
