--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -59,7 +59,7 @@
 					img
 						margin: -4px 7px 0 0
 
-			.wrap, .right-align .btn, .reorder
+			.wrap, .right-align .btn, .reorder, .right-align
 				height: 34px
 				line-height: 34px
 
@@ -107,6 +107,7 @@
 					border-top-right-radius: 4px
 					border-bottom-right-radius: 4px
 					@include gradient(#ffffff,#f5f5f5)
+					overflow: hidden
 
 					.status-icon
 						margin: 11px 10px 0 5px
