--- a/css/eze.css
+++ b/css/eze.css
@@ -790,7 +790,7 @@
       border-radius: 4px;
       padding: 0;
       position: relative;
-      overflow: hidden; }
+      overflow: visible; }
       .eze .eze-items li .wrap .reorder {
         display: block;
         width: 40px;
@@ -803,6 +803,7 @@
       .eze .eze-items li .wrap input[type="checkbox"] {
         margin: 2px 0 0 10px; }
       .eze .eze-items li .wrap input[type="text"] {
+        width: 130px;
         height: 22px;
         padding: 0 3px;
         margin: -1px 5px 0 5px;
@@ -841,6 +842,14 @@
       margin: 5px 5px 0 0;
       display: block;
       float: left; }
+  .eze .eze-items.with-dropdown li .right-align, .eze .eze-items.with-dropdown li .wrap {
+    overflow: visible; }
+  .eze .eze-items.with-dropdown li .title {
+    width: 70%;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis; }
 .eze .eze-content-types {
   list-style: none;
   margin: 0; }
@@ -1269,6 +1278,8 @@
 .eze .eze-layout .tab-content {
   overflow: visible;
   padding: 5px 0 0 0; }
+.eze .eze-layout .eze-items .wrap .title {
+  width: 40%; }
 
 .eze {
   margin: 0;
