Style fixes for table, plus animation on publishing and removing classes in table

--- a/css/sass/animations.sass
+++ b/css/sass/animations.sass
@@ -1,5 +1,33 @@
 // Keyframe Animations
 
+@-webkit-keyframes table-publish
+	0%
+		background: #fff
+	100%
+		background: #bee9bf
+
+@-moz-keyframes table-publish
+	0%
+		background: #fff
+	100%
+		background: #bee9bf
+
+@-webkit-keyframes removing
+	0%
+		opacity: 1
+	100%
+		opacity: 0
+
+@-moz-keyframes removing
+	0%
+		opacity: 1
+	100%
+		opacity: 0
+
+
+
+// Stack
+
 
 @-webkit-keyframes fade-in
 	0%
