--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -25,10 +25,11 @@
 
 	.eze-stack-content
 		h1
-			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			font: 100 28px/20px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			letter-spacing: 1px
 
 		h2
-			font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			font: bold 14px/14px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
 
 	// Small modal
