--- a/css/eze.css
+++ b/css/eze.css
@@ -1,7 +1,3 @@
-.eze h1 {
-  font: normal 30px/30px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
-  .eze h1 button {
-    margin: -3px 0 0 5px; }
 .eze .eze-table {
   position: absolute;
   top: 20px;
@@ -40,17 +36,18 @@
           opacity: 1; }
   .eze .eze-table .eze-table-content {
     position: absolute;
-    top: 86px;
+    top: 81px;
     right: 0;
     left: 0;
     bottom: 0;
     overflow-y: scroll;
+    background: white;
     margin-right: 212px;
-    border-bottom: 1px solid #e4e3e3;
-    border-top: 1px solid #e4e3e3;
+    border: 1px solid #e4e3e3;
     -webkit-overflow-scrolling: touch;
     -webkit-transform: translateZ(0); }
     .eze .eze-table .eze-table-content .loading-bar {
+      background: #0a0a0a;
       background: rgba(0, 0, 0, 0.7);
       color: white;
       text-align: center;
@@ -59,12 +56,12 @@
       position: relative;
       left: 50%;
       right: 50%;
-      margin: -32px 0 0 -100px;
+      margin: 0 0 0 -100px;
       width: 200px;
       height: 20px;
       padding: 6px 0; }
     .eze .eze-table .eze-table-content .group-header {
-      margin: 0;
+      margin: -1px 0 0 0;
       background-color: white;
       background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#fafafa));
       background-image: -webkit-linear-gradient(top, white, #fafafa);
@@ -72,39 +69,37 @@
       background-image: -ms-linear-gradient(top, white, #fafafa);
       background-image: -o-linear-gradient(top, white, #fafafa);
       background-image: linear-gradient(top, white, #fafafa);
-      border: 1px solid #e4e3e3;
-      padding: 5px 5px 3px 5px;
+      padding: 9px 0 8px 10px;
       color: #4c4c4c;
       font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+      border-bottom: 1px solid #e4e3e3;
+      border-top: 1px solid #e4e3e3;
       position: relative;
       z-index: 2; }
-      .eze .eze-table .eze-table-content .group-header:first-child {
-        border-top: 0; }
     .eze .eze-table .eze-table-content ul {
       list-style: none;
-      margin: 0; }
+      margin: 0 0 1px 0; }
       .eze .eze-table .eze-table-content ul li.item {
-        background: #fafafa;
-        padding: 0 0 0 130px;
-        margin: 0 0 1px 10px;
-        border-right: 1px solid #e8e8e8; }
-        .eze .eze-table .eze-table-content ul li.item:nth-child(2n) {
-          background: white; }
+        background: white;
+        border-bottom: 1px solid white;
+        padding: 0 0 0 0;
+        margin: 0 1px; }
+        .eze .eze-table .eze-table-content ul li.item:nth-child(2n), .eze .eze-table .eze-table-content ul li.item:nth-child(2n) .check {
+          background: #fafafa; }
         .eze .eze-table .eze-table-content ul li.item .check {
           float: left;
-          width: 12px;
-          margin: 0 -20px 0 -130px;
-          background: #fafafa;
-          border-bottom-right-radius: 4px;
-          padding: 2px 4px 2px 2px;
+          width: 19px;
+          height: 19px;
+          padding: 0;
+          margin: 0 -19px 0 0;
           position: relative;
           z-index: 1;
-          -webkit-transform: translateZ(0); }
+          -webkit-transform: translateZ(0);
+          background: white; }
           .eze .eze-table .eze-table-content ul li.item .check input {
-            margin: 0; }
+            margin: 0 0 0 3px; }
         .eze .eze-table .eze-table-content ul li.item .thumb {
-          margin: 0 0 0 -130px;
+          margin: 0 10px 0 0;
           width: 110px;
           height: 90px;
           float: left;
@@ -115,20 +110,28 @@
               margin: 30px 0 0 39px; }
         .eze .eze-table .eze-table-content ul li.item h2 {
           font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
-          margin: 10px 0 5px 0; }
+          margin: 10px 0 8px 0; }
         .eze .eze-table .eze-table-content ul li.item p {
-          float: left;
           width: 100%;
-          font: normal 12px/20px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+          font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
           .eze .eze-table .eze-table-content ul li.item p .other-locations {
             border-bottom: 1px dashed black; }
+      .eze .eze-table .eze-table-content ul li.publishing {
+        -moz-animation: table-publish 0.3s ease 1 normal;
+        -webkit-animation: table-publish 0.3s ease 1 normal;
+        background: #bee9bf; }
+      .eze .eze-table .eze-table-content ul li.removing {
+        -moz-animation: removing 0.3s ease 1 normal;
+        -webkit-animation: removing 0.3s ease 1 normal;
+        opacity: 0; }
   .eze .eze-table .eze-filters {
     right: 0;
     position: absolute;
     width: 180px;
     padding: 10px;
     border: 1px solid #eeeeee;
-    background: white; }
+    background: white;
+    display: none; }
     .eze .eze-table .eze-filters .description {
       font-size: 11px;
       margin: 0 0 0 2px; }
@@ -305,9 +308,10 @@
     box-shadow: 3px 0 0 0 rgba(0, 0, 0, 0.3);
     min-height: 100%; }
 .eze .eze-stack-content h1 {
-  font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+  font: 100 28px/20px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+  letter-spacing: 1px; }
 .eze .eze-stack-content h2 {
-  font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+  font: bold 14px/14px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
 .eze .eze-smallmodal {
   position: absolute;
   top: 20px;
@@ -921,6 +925,34 @@
         font: normal 11px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
         height: 12px;
         width: 99%; }
+
+@-webkit-keyframes table-publish {
+  0% {
+    background: white; }
+
+  100% {
+    background: #bee9bf; } }
+
+@-moz-keyframes table-publish {
+  0% {
+    background: white; }
+
+  100% {
+    background: #bee9bf; } }
+
+@-webkit-keyframes removing {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@-moz-keyframes removing {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
 
 @-webkit-keyframes fade-in {
   0% {
