--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -2,12 +2,6 @@
 
 .eze
 
-    h1
-        font: normal 30px/30px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-
-        button
-            margin: -3px 0 0 5px
-
     .eze-table
         position: absolute
         top: 20px
@@ -55,18 +49,19 @@
 
         .eze-table-content
             position: absolute
-            top: 86px
+            top: 81px
             right: 0
             left: 0
             bottom: 0
             overflow-y: scroll
+            background: #fff
             margin-right: 212px
-            border-bottom: 1px solid #e4e3e3
-            border-top: 1px solid #e4e3e3
+            border: 1px solid #e4e3e3
             -webkit-overflow-scrolling: touch
             -webkit-transform: translateZ(0)
 
             .loading-bar
+                background: rgb(10,10,10)
                 background: rgba(0,0,0,0.7)
                 color: #fff
                 text-align: center
@@ -75,56 +70,53 @@
                 position: relative
                 left: 50%
                 right: 50%
-                margin: -32px 0 0 -100px
+                margin: 0 0 0 -100px
                 width: 200px
                 height: 20px
                 padding: 6px 0
 
             .group-header
-                margin: 0
+                margin: -1px 0 0 0
                 @include gradient(#ffffff,#fafafa)
-                border: 1px solid #e4e3e3
-                padding: 5px 5px 3px 5px
+                padding: 9px 0 8px 10px
                 color: #4c4c4c
                 font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1)
+                border-bottom: 1px solid #e4e3e3
+                border-top: 1px solid #e4e3e3
                 position: relative
                 z-index: 2
 
-                &:first-child
-                    border-top: 0
-
             ul
                 list-style: none
-                margin: 0
+                margin: 0 0 1px 0
 
                 li
 
                     &.item
-                        background: #fafafa
-                        padding: 0 0 0 130px
-                        margin: 0 0 1px 10px
-                        border-right: 1px solid #e8e8e8
+                        background: #fff
+                        border-bottom: 1px solid #fff
+                        padding: 0 0 0 0
+                        margin: 0 1px
 
-                        &:nth-child(2n)
-                            background: #fff
+                        &:nth-child(2n), &:nth-child(2n) .check
+                            background: #fafafa
 
                         .check
                             float: left
-                            width: 12px
-                            margin: 0 -20px 0 -130px
-                            background: #fafafa
-                            border-bottom-right-radius: 4px
-                            padding: 2px 4px 2px 2px
+                            width: 19px
+                            height: 19px
+                            padding: 0
+                            margin: 0 -19px 0 0
                             position: relative
                             z-index: 1
                             -webkit-transform: translateZ(0)
+                            background: #fff
 
                             input
-                                margin: 0
+                                margin: 0 0 0 3px
 
                         .thumb
-                            margin: 0 0 0 -130px
+                            margin: 0 10px 0 0
                             width: 110px
                             height: 90px
                             float: left
@@ -138,14 +130,23 @@
 
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                            margin: 10px 0 5px 0
+                            margin: 10px 0 8px 0
                         p
-                            float: left
                             width: 100%
-                            font: normal 12px/20px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                            font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
                             .other-locations
                                 border-bottom: 1px dashed #000
+
+                    &.publishing
+                        -moz-animation: table-publish 0.3s ease 1 normal
+                        -webkit-animation: table-publish 0.3s ease 1 normal
+                        background: #bee9bf
+
+                    &.removing
+                        -moz-animation: removing 0.3s ease 1 normal
+                        -webkit-animation: removing 0.3s ease 1 normal
+                        opacity: 0
 
         .eze-filters
             right: 0
@@ -154,6 +155,7 @@
             padding: 10px
             border: 1px solid #eee
             background: #fff
+            display: none
 
             .description
                 font-size: 11px
