Forgot a display none rule

--- a/css/eze.css
+++ b/css/eze.css
@@ -130,8 +130,7 @@
     width: 180px;
     padding: 10px;
     border: 1px solid #eeeeee;
-    background: white;
-    display: none; }
+    background: white; }
     .eze .eze-table .eze-filters .description {
       font-size: 11px;
       margin: 0 0 0 2px; }
