--- a/css/eze.css
+++ b/css/eze.css
@@ -32,7 +32,7 @@
           opacity: 1; }
   .eze .eze-table .eze-table-content {
     position: absolute;
-    top: 81px;
+    top: 84px;
     right: 0;
     left: 0;
     bottom: 0;
@@ -126,6 +126,8 @@
     position: absolute;
     width: 200px;
     margin-top: -37px; }
+    .eze .eze-table .eze-filters-wrap .form-search {
+      margin: 0 0 10px 0; }
     .eze .eze-table .eze-filters-wrap .eze-filters {
       border: 1px solid #eeeeee;
       width: 178px;
