--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -45,7 +45,7 @@
 
         .eze-table-content
             position: absolute
-            top: 81px
+            top: 84px
             right: 0
             left: 0
             bottom: 0
@@ -150,6 +150,9 @@
             position: absolute
             width: 200px
             margin-top: -37px
+
+            .form-search
+                margin: 0 0 10px 0
 
             .eze-filters
                 border: 1px solid #eee
