--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -120,6 +120,7 @@
 
                             img
                                 float: left
+                                height: 90px
 
                                 &.class-icon
                                     margin: 30px 0 0 39px
