Moved form in table filters

--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -152,10 +152,8 @@
             width: 200px
             margin-top: -37px
 
-            .form-search
-                margin: 0 0 10px 0
-
             .eze-filters
+                margin-top: 10px
                 border: 1px solid #eee
                 width: 178px
                 padding: 10px
