--- a/css/eze.css
+++ b/css/eze.css
@@ -127,9 +127,8 @@
     position: absolute;
     width: 200px;
     margin-top: -37px; }
-    .eze .eze-table .eze-filters-wrap .form-search {
-      margin: 0 0 10px 0; }
     .eze .eze-table .eze-filters-wrap .eze-filters {
+      margin-top: 10px;
       border: 1px solid #eeeeee;
       width: 178px;
       padding: 10px;
