Fixed height for class icons in table

--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -124,6 +124,7 @@
 
                                 &.class-icon
                                     margin: 30px 0 0 39px
+                                    height: auto
 
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
