--- a/css/eze.css
+++ b/css/eze.css
@@ -104,7 +104,8 @@
             float: left;
             height: 90px; }
             .eze .eze-table .eze-table-content ul li.item .thumb img.class-icon {
-              margin: 30px 0 0 39px; }
+              margin: 30px 0 0 39px;
+              height: auto; }
         .eze .eze-table .eze-table-content ul li.item h2 {
           font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
           margin: 10px 0 8px 0; }
