--- a/css/sass/animations.sass
+++ b/css/sass/animations.sass
@@ -24,6 +24,24 @@
 	100%
 		opacity: 0
 
+@-webkit-keyframes autosave-highlight
+	0%
+		background: rgba(255,204,0,0)
+	50%
+		background: rgba(255,204,0,1)
+
+	100%
+		background: rgba(255,204,0,0)
+
+@-moz-keyframes autosave-highlight
+	0%
+		background: rgba(255,204,0,0)
+	50%
+		background: rgba(255,204,0,1)
+
+	100%
+		background: rgba(255,204,0,0)
+
 
 
 // Stack
