--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -41,8 +41,10 @@
 
 			.btn
 				float: right
-				margin: 2px 3px 0 0
 				display: none
+
+				&.btn-mini
+					margin: 3px 9px 0 0
 
 		&:nth-last-child(2) header
 			@include gradient(#ffc785, #ffb365)
@@ -55,8 +57,8 @@
 
 		&.last header
 			height: 44px
-			right: 0
-			max-width: 1144px
+			right: 44px
+			max-width: 1100px
 			@include gradient(#ff9b00, #ff8500)
 			border-bottom: 0
 			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4)
@@ -72,10 +74,6 @@
 					.large
 						display: block
 
-			.btn
-				margin: 9px 9px 0 0
-				border: 1px solid #fff
-
 		&.move-in header
 			-moz-animation: stack-header-move-in 0.5s ease 1 normal
 			-webkit-animation: stack-header-move-in 0.7s ease 1 normal
@@ -86,12 +84,7 @@
 
 		.eze-autosave
 			float: right
-			position: relative
-			margin-top: 2px
-
-			img
-				border: 0
-				margin: 9px 0 0 0
+			margin: 9px 9px 0 0
 
 		// Stack content
 
