--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -127,11 +127,10 @@
 			background: #A3E10B
 			border-color: #91C90A
 
-
-// Fixes for ezexceed demo design general styles
-
+	// Fixes for ezexceed demo design general styles
 	header
 		min-height: 0
+		background: cyan
 
 	section ul li::before, footer ul li::before, section ol li::before, footer ol li::before
 		display: none
